--- a/ls.web/Views/Blogs/Index.cshtml
+++ b/ls.web/Views/Blogs/Index.cshtml
@@ -9,25 +9,64 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.title)
-        </th>
-        <th></th>
-    </tr>
+<input type="text" name="title" placeholder="博客标题" />
+<input type="button" value="Search" onclick="search()" />
+<div id="content-body">
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.title)
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.title)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.title)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+
+    </table>
+</div>
+@section scripts{
+    <script>
+
+        function search() {
+            var title = $("input[name=title]").val();
+            $.post("/Blogs/QueryData", { title: title }, function (data) {
+                var contentbody = "<table class='table'><tr><th>标题</th><th></th></tr>";
+
+                $(data.dtos).each(function(i,v){
+                    contentbody +="<tr><td>";
+                    contentbody+=v.title;
+                    contentbody+="</td></tr>";
+                });
+                @*@foreach (var item in Model)
+                {
+                    <tr>
+                                <td>
+                @Html.DisplayFor(modelItem => item.title)
+                                </td>
+                                <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                </td>
+                            </tr>
+                }*@
+
+                contentbody+=" </table>";
+                $("#content-body").html(contentbody);
+            });
+
+        }
+    </script>
 }
-
-</table>
